name:                ariaRacer
version:             0.1.0.0
synopsis:            Web UI for racing Aria Robots in MTRE3100
description:         Please see README.md
homepage:            https://github.com/theNerd247/ariaRacer#readme
license:             GPL-2
license-file:        LICENSE
author:              theNerd247
maintainer:          noah.harvey247@gmail.com
copyright:           2016  theNerd247
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Aria.Repo.DB
                     , Aria.Types
                     , Aria.Repo
                     , Data.Acid.Run
                     , Aria.Scripts
  build-depends:       base
                     , acid-state
                     , bytestring
                     , cereal
                     , containers
                     , directory
                     , exceptions
                     , filepath
                     , ixset
                     , lens
                     , mtl
                     , process
                     , safecopy
                     , text
                     , time
                     , transformers

  default-language:    Haskell2010

--executable arweb
  --hs-source-dirs:      arweb/app
  --main-is:             Main.hs
  --ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  --build-depends:       base
                     --, ariaRacer
                     --, blaze-html
                     --, blaze-bootstrap
                     --, text
                     --, optparse-applicative
                     --, lens
                     --, time
                     --, reform
                     --, reform-blaze
  --default-language:    Haskell2010

--executable arrun
  --hs-source-dirs:     arrun/app
  --main-is:             Main.hs
  --ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  --build-depends:       base
                     --, ariaRacer
                     --, text
                     --, optparse-applicative
                     --, lens
                     --, time
                     --, stm
                     --, process
                     --, attoparsec
                     --, network-simple
                     --, bytestring
                     --, cereal
  --default-language:    Haskell2010

executable artmp
  hs-source-dirs:      artmp
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ariaRacer
                     , acid-state
                     , mtl
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ theNerd247/ariaRacer
